# imagezero

./: AUTHORS  CHANGELOG.rst  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  WARNING  bitcoder.h  build.mk  buildconf.sh  configure.in  decode.cpp  decoder.h  encode.cpp  encoder.h  file.cpp  file.h  image.h  intmacros.h  iz.pro  iz_p.h  libiz.cpp  libiz.h  main.cpp  package.xml  pixel.h  portableimage.cpp  portableimage.h  predict.h  table.cpp
include/imagezero/: decoder.h  encoder.h  file.h  image.h  intmacros.h  iz_p.h  pixel.h  portableimage.h
man/man1/: iz.1
src/: file.cpp  libiz.cpp  main.cpp  portableimage.cpp  table.cpp
